--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 <body>
     <div class="container">
 
-    <h1>Hello World !</h1>
+        <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                Column
+              </div>
+              <div class="col">
+                Column
+              </div>
+              <div class="col">
+                Column
+              </div>
+            </div>
+          </div>
     
     </div>
     
