--- a/index.html
+++ b/index.html
@@ -86,12 +86,14 @@
         <div class="col-12 col-sm-6 mx-0">
           <div class="titles_first_page text-info">
             <h2>Présentation</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere cumque molestias ullam accusantium perspiciatis neque quos deserunt nemo. Nihil modi dicta, facilis accusamus ipsa dolore natus, laboriosam quis nostrum, commodi qui iste! Dolorem, praesentium earum cumque repellat asperiores assumenda illo repellendus corporis possimus quib, expedita vitae ipsam iusto enim nobis doloribus officiis est inventore molestias eos corrupti reprehenderit quaerat? Cum animi numquam blanditiis, velit ipsam incidunt corrupti beatae veniam, eaque esse vel rem. Odit, officia? Dicta quos perferendis numquam? Accusantium, ex. Corporis, sunt iusto!</p>
           </div>
         </div>
   
         <div class="col-12 col-sm-6 mx-0 ">
           <div class="title_two text-white">
             <h2>Mes Prérequis</h2>
+            <p></p>
           </div>
         </div>
       </div>
